forth/test/fail/test_dot_call_plain_intrin_try_all.af
\ Must fail to compile.
true try_all
